# Janus

./: .gitignore  .gitmodules  CHANGELOG.md  CROSS_PLATFORM_BLOCKER.md  PRIME_DIRECTIVE.md  PROTOCOL.md  README.md  RELEASE_NOTES.md  USAGE.md  api-specification-schema.json  api_spec_validator.py  benchmark_report.txt  benchmark_results.json  comprehensive_benchmark.py  comprehensive_benchmark_results.json  debug_go_client.go  debug_protocol.go  debug_rust_server  debug_rust_server.rs  debug_socket.go  example-api-spec.json  performance_benchmark.py  performance_report.txt  quick_benchmark.py  simple_benchmark.py  test-api-spec.json  test-spec.json  test_cross_platform.sh  test_go_rust.sh  test_orchestrator.py  test_socket_creation.sh  test_validation.txt  version.txt
.github/workflows/: cross-platform-tests.yml
.ws/: state.json
docs/: README.md  index.html  script.js
docs/fixed-docs/: README.md  index.html  manifest.json  openapi.json  script.js  styles.css
docs/test-docs/: README.md  index.html  script.js  styles.css
janus-docs-cli/: README.md  manifest.json  package-lock.json  package.json  tsconfig.json
janus-docs-cli/src/: cli.ts  generator.ts  server.ts  watcher.ts
tests/: COMPREHENSIVE_TESTING_GUIDE.md  README.md  go_rust_simple_test.go  run_all_tests.sh  run_comprehensive_tests.py  run_comprehensive_tests.sh  run_tests.py
tests/library_based_tests/rust/: Cargo.toml  cross_platform_test.rs  cross_platform_test_fixed.rs  integration_test.rs  simple_socket_test.rs
unixsocket-docs-cli/: README.md  api-spec.json  package-lock.json  package.json
(+90 files in other folders)
