[package]
name = "janus-library-tests-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
rust_janus = { path = "../../../RustJanus", package = "RustJanus" }
chrono = "0.4"

[[test]]
name = "integration_test"
path = "integration_test.rs"

[[test]]
name = "cross_platform_test"
path = "cross_platform_test.rs"
[[bin]]
name = "debug_server"
path = "src/bin/debug_server.rs"

[[bin]]
name = "debug_enhanced"
path = "src/bin/debug_enhanced.rs"
